--- a/3-22/package.json
+++ b/3-22/package.json
@@ -1,7 +1,6 @@
 {
   "name": "3-22",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,7 @@
     "pg": "^8.10.0",
     "sequelize": "^6.29.3",
     "session": "^0.1.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
