--- a/4-12/Server/package.json
+++ b/4-12/Server/package.json
@@ -8,11 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "react-router-dom": "^6.10.0"
   },
-  "devDependencies": {},
   "description": ""
 }
